# brightNES

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt
src/: cpu.c  cpu.h  debug.h  disp.c  disp.h  display.h  dma.c  dma.h  joypad.c  joypad.h  log.c  log.h  main.c  mem.h  nes.c  nes.h  parse_args.h  ppu.c  ppu.h  rom.c  rom.h  types.h
